--- a/PROYECTO SEMESTRAL/CSS/cambios.css
+++ b/PROYECTO SEMESTRAL/CSS/cambios.css
@@ -14,15 +14,16 @@
 /*color de fondo*/
 .fondo
 {
+  background-image: url("../img/fondo_xbox.jpg") ;
   background-color: rgba(84, 12, 199, 0.555);
 }
 
 /*centrado de imagenes*/
 .img
 {
-display: block;
-margin-left: auto;
-margin-right: auto;
+
+width: 70%;
+max-width: 500px;
 }
 
 /*centrado de pagina*/
@@ -32,7 +33,8 @@ margin-right: auto;
 }
 
 /*Menu*/
-ul {
+ul
+ {
     list-style-type: none;
     margin: 0;
     padding: 0;
