--- a/PROYECTO SEMESTRAL/CSS/cambios.css
+++ b/PROYECTO SEMESTRAL/CSS/cambios.css
@@ -44,6 +44,12 @@ max-width: 500px;
     text-align: center;
 }
 
+/*color de letra play*/
+.letrap
+{
+  color: rgb(255, 255, 255);
+}
+
 /*Menu*/
 ul
  {
