--- a/PROYECTO SEMESTRAL/CSS/cambios.css
+++ b/PROYECTO SEMESTRAL/CSS/cambios.css
@@ -106,7 +106,11 @@ max-width: 500px;
   color:rgb(255, 255, 255)
 }
 
+/*colocar parrafo a la derecha*/
 
+.derecha{
+  text-align: right;
+}
 
 /*Menu*/
 ul
