--- a/PROYECTO SEMESTRAL/CSS/cambios.css
+++ b/PROYECTO SEMESTRAL/CSS/cambios.css
@@ -169,6 +169,14 @@ max-width: 500px;
   cursor: url(../img/CURSOR/cuN1.png),auto;
 }
 
+/*Cursor general*/
+.cu{
+  cursor: url(../img/CURSOR/CURSOR.png),auto;
+}
+.cu1{
+  cursor: url(../img/CURSOR/CURSOR1.png),auto;
+}
+
 /*Margen iniciar*/
 .margenI{
   margin-left: 110px;
