--- a/PROYECTO SEMESTRAL/CSS/cambios.css
+++ b/PROYECTO SEMESTRAL/CSS/cambios.css
@@ -62,6 +62,11 @@
   background-color: rgb(98, 247, 247);
 }
 
+/*Fondos de videoJuegos*/
+.fondoVJ{
+  background-color: rgb(153, 153, 211);
+}
+
 
 /*centrado de imagenes*/
 .img
