--- a/PROYECTO SEMESTRAL/CSS/cambios.css
+++ b/PROYECTO SEMESTRAL/CSS/cambios.css
@@ -64,7 +64,7 @@
 
 /*Fondos de videoJuegos*/
 .fondoVJ{
-  background-color: rgb(153, 153, 211);
+  background-color: rgb(34, 34, 85);
 }
 
 
@@ -121,6 +121,13 @@ max-width: 500px;
   font-family: 'Lora', serif;
   background-color: rgb(137, 27, 240);
   color:rgb(245, 245, 245);
+}
+
+/*Letra VideoJuego*/
+.letraVJ{
+  color: rgba(255, 255, 255, 0.877);
+  font-family: 'PT Sans Narrow', sans-serif;
+
 }
 
 /*colocar parrafo a la derecha*/
