--- a/PROYECTO SEMESTRAL/CSS/cambios.css
+++ b/PROYECTO SEMESTRAL/CSS/cambios.css
@@ -142,7 +142,9 @@ max-width: 500px;
 }
 /*Estilo de tablas*/
 table, th, td {
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  font-family: 'Josefin Sans', sans-serif;  
 }
 
 /*colocar parrafo a la derecha*/
